# systemd-language-server-rs

./: Cargo.toml  LICENSE  README.md  README_CN.md
.github/workflows/: ci.yml  release.yml  rust.yml
examples/: example.service
src/: lib.rs
tests/: diagnostics_tests.rs  integration_tests.rs  systemd_unit_tests.rs
