[package]
name = "systemd-language-server"
version = "0.1.0"
edition = "2024"
description = "A Rust and Language Server Protocol (LSP) based language server for systemd unit files"
license = "MIT"
authors = ["10fish <jokefish@live.com>"]
repository = "https://github.com/10fish/systemd-language-server"
keywords = ["systemd", "language", "server", "lsp"]
readme = "README.md"


[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
ini = "1.3"
anyhow = "1"


[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["full", "test-util", "macros"] }
url = "2.3"

[[bin]]
name = "systemd-language-server"
path = "bin/server.rs"